--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/windowBackground</item>
         <item name="actionBarTheme">@style/AppBaseTheme.Toolbar</item>
+        <item name="colorControlNormal">@color/textColorPrimary</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppBaseTheme.Toolbar" parent="Widget.AppCompat.ActionBar.Solid">
         <item name="android:textColorPrimary">@color/textColorPrimary</item>
-
     </style>
 
     <style name="AppTheme.NoActionBar">
