--- a/app/src/main/res/layout/fragment_popular.xml
+++ b/app/src/main/res/layout/fragment_popular.xml
@@ -4,7 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="15dp"
+    android:paddingBottom="15dp"
     tools:context="com.filho.filho.PopularFragment">
 
+    <ListView
+        android:id="@+id/listview_popular"
+        android:layout_width="match_parent"
+        android:scrollbars="none"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
