--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="left"
+
     tools:context="com.filho.filho.MainActivity">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:measureWithLargestChild="false"
         android:layout_height="match_parent"
+        android:measureWithLargestChild="false"
         android:orientation="vertical">
 
-        <include android:id="@+id/toolbar" layout="@layout/layout_toolbar"/>
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/layout_toolbar" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabDiscovery"
@@ -46,7 +49,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/pagerDiscovery"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
@@ -54,8 +57,8 @@
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:backgroundTint="@color/textColorWhite"
         android:layout_gravity="start"
+        android:backgroundTint="@color/textColorWhite"
         app:headerLayout="@layout/menu_header"
         app:menu="@menu/menu" />
 
