--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:id="@+id/drawer_menu"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="Hai ini menu"
-        android:textColor="@color/textColorWhite"
-        android:layout_height="wrap_content" />
+        android:textColor="@color/textColorWhite" />
 
 </android.support.v4.widget.DrawerLayout>
