--- a/app/src/main/res/layout/activity_film_detail.xml
+++ b/app/src/main/res/layout/activity_film_detail.xml
@@ -81,6 +81,7 @@
         android:id="@+id/insertComment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
