--- a/app/src/main/res/layout/activity_film_detail.xml
+++ b/app/src/main/res/layout/activity_film_detail.xml
@@ -81,7 +81,7 @@
         android:id="@+id/insertComment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:background="@color/colorPrimary"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
@@ -90,14 +90,16 @@
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="5"
+            android:paddingLeft="10dp"
             android:gravity="top|left"
+            android:backgroundTint="@android:color/transparent"
             android:textColor="@color/textColorPrimary"
             android:scrollHorizontally="false" />
 
         <Button
             android:id="@+id/buttonSend"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/windowBackground"
             android:text="Send"
