--- a/app/src/main/res/layout/film_item.xml
+++ b/app/src/main/res/layout/film_item.xml
@@ -23,4 +23,12 @@
         android:layout_below="@id/filmTitle"
         android:layout_toRightOf="@id/filmCover"
         android:textColor="@color/textColorPrimary" />
+
+    <TextView
+        android:id="@+id/filmRating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/filmDate"
+        android:layout_toRightOf="@id/filmCover"
+        android:textColor="@color/textColorPrimary" />
 </RelativeLayout>
